--- a/www/camera.html
+++ b/www/camera.html
@@ -98,20 +98,19 @@
 			<div class="sidebar-header sidebar-header-image bg-2">
 				<div class="overlay dark-overlay"></div>
 				<div class="sidebar-socials">
-					<a href="#"><i class="ion-social-facebook"></i></a>
-					<a href="#"><i class="ion-social-instagram"></i></a>
-					<a href="https://open.spotify.com/user/acey_nl/playlist/47EqpXneXHfKoEbvrffVqs"><i class="fa fa-spotify"></i></a>
+					<a href="https://www.facebook.com/deslagomdomburg/" target="_blank"><i class="ion-social-facebook"></i></a>
+					<a href="https://www.instagram.com/deslagomdomburg/" target="_blank"><i class="ion-social-instagram"></i></a>
+					<a href="https://www.youtube.com/channel/UCLWvI-28tgYscwuqoYEOoiw" target="_blank"><i class="ion-social-youtube"></i></a>
 					<a href="contact.html"><i class="ion-android-mail"></i></a>
 					<a class="close-sidebar" href="#"><i class="ion-android-close"></i></a>
 					<div class="clear"></div>
 				</div>
 				<a href="index.html" class="sidebar-logo">
-<!-- 					<strong>De Slag om Domburg</strong> -->
 				</a>
 			</div>
 			<div class="menu-options icon-background no-submenu-numbers sidebar-menu">
 				<em class="menu-divider">Navigatie</em>
-				<a class="active-item" href="index.html"><i class="icon-bg donker-bg ion-happy-outline"></i><span>Main</span><i class="ion-record"></i></a>
+				<a href="index.html"><i class="icon-bg donker-bg ion-happy-outline"></i><span>Main</span><i class="ion-record"></i></a>
 				<a href="prog.html"><i class="icon-bg donker-bg ion-clock"></i><span>Festival Programma</span><i class="ion-record"></i></a>
 				<a data-sub="sidebar-sub-0" href="#"><i class="icon-bg donker-bg ion-ios-star"></i><span>Artiesten</span><strong class="plushide-animated"></strong></a>
 				<div class="submenu" id="sidebar-sub-0">
@@ -123,9 +122,8 @@
 					<a href="band-jw.html"><span>Jason Waterfalls</span></a>
 					<a href="band-br.html"><span>Bad Ragas</span></a>
 				</div>
-				<a href="camera.html"><i class="icon-bg donker-bg ion-camera"></i><span>Camera</span><i class="ion-record"></i></a>
-				<a href="fotos.html"><i class="icon-bg donker-bg ion-image"></i><span>Fotos</span><i class="ion-record"></i></a>
-				
+				<a class="active-item" href="camera.html"><i class="icon-bg donker-bg ion-camera"></i><span>Camera</span><i class="ion-record"></i></a>
+				<a href="fotos.html"><i class="icon-bg donker-bg ion-image"></i><span>Fotos</span><i class="ion-record"></i></a>				
 				<a href="#" class="close-sidebar"><i class="icon-bg bg-red-light ion-android-close"></i><span>Close</span><i class="ion-record"></i></a>
 				<em class="menu-divider">Copyright <u class="copyright-year"></u>. All rights reserved</em>
 			</div>
@@ -134,28 +132,23 @@
 			<div class="sidebar-header sidebar-header-classic">
 				<div class="sidebar-socials">
 					<a class="close-sidebar" href="#"><i class="ion-android-close"></i></a>
-					<a href="#"><i class="ion-social-facebook"></i></a>
-					<a href="#"><i class="ion-social-twitter"></i></a>
-					<a href="#"><i class="ion-ios-telephone"></i></a>
-					<a href="#"><i class="ion-android-mail"></i></a>
+					<a href="https://www.facebook.com/deslagomdomburg/" target="_blank"><i class="ion-social-facebook"></i></a>
+					<a href="https://www.instagram.com/deslagomdomburg/" target="_blank"><i class="ion-social-instagram"></i></a>
+					<a href="https://www.youtube.com/channel/UCLWvI-28tgYscwuqoYEOoiw" target="_blank"><i class="ion-social-youtube"></i></a>
+					<a href="contact.html"><i class="ion-android-mail"></i></a>
 					<div class="clear"></div>
 				</div>
-				<a href="index.html" class="sidebar-logo">
-					<!-- <strong>De Slag om Domburg 2017</strong> -->
-				</a>
+				<a href="index.html" class="sidebar-logo"></a>
 			</div>
-
 			<div class="menu-options icon-background sidebar-menu">
 				<em class="menu-divider">Sociale netwerken</em>
-				<a class="default-link" href="https://www.facebook.com/deslagomdomburg/"><i class="icon-bg donker-bg ion-social-facebook"></i><span>Facebook</span><i class="ion-record"></i></a>
-				<!-- <a class="default-link" href="https://twitter.com/iEnabled"><i class="icon-bg twitter-bg ion-social-twitter"></i><span>Twitter</span><i class="ion-record"></i></a> -->
-				<a class="default-link" href="https://www.instagram.com/deslagomdomburg/"><i class="icon-bg donker-bg ion-social-instagram"></i><span>Instagram</span><i class="ion-record"></i></a>
-								<a class="default-link" href="https://www.youtube.com/user/Envato"><i class="icon-bg donker-bg ion-social-youtube"></i><span>YouTube</span><i class="ion-record"></i></a>
+				<a class="default-link" href="https://www.facebook.com/deslagomdomburg/" target="_blank"><i class="icon-bg donker-bg ion-social-facebook"></i><span>Facebook</span><i class="ion-record"></i></a>
+				<a class="default-link" href="https://www.instagram.com/deslagomdomburg/" target="_blank"><i class="icon-bg donker-bg ion-social-instagram"></i><span>Instagram</span><i class="ion-record"></i></a>
+								<a class="default-link" href="https://www.youtube.com/channel/UCLWvI-28tgYscwuqoYEOoiw" target="_blank"><i class="icon-bg donker-bg ion-social-youtube"></i><span>YouTube</span><i class="ion-record"></i></a>
 				<em class="menu-divider">Neem contact met ons op</em>
 				<a href="contact.html"><i class="icon-bg donker-bg ion-email"></i><span>Email</span><i class="ion-record"></i></a>
 				<a href="tel:+316 234 567 890"><i class="icon-bg donker-bg ion-ios-telephone"></i><span>Phone</span><i class="ion-record"></i></a>
 				<a href="https://api.whatsapp.com/send?phone=00316234567890"><i class="icon-bg donker-bg ion-social-whatsapp"></i><span>Whatsapp</span><i class="ion-record"></i></a>
-
 				<em class="menu-divider">Copyright <u class="copyright-year"></u>. All rights reserved</em>
 			</div>
 		</div>
@@ -166,6 +159,7 @@
 		<a href="index.html" class="header-logo"></a>
 		<a href="#" class="header-icon header-icon-4 open-sidebar-right"><i class="ion-ios-email-outline"></i></a>    
 	</div>
+	
 	
 	<div id="page-content" class="page-content">	
 		<div id="page-content-scroll" class="header-clear"><!--Enables this element to be scrolled --> 
@@ -205,21 +199,12 @@
 				<p class="footer-text">
 					De Slag om Domburg | Festival | Surf event
 				</p>
-<!-- 				<div class="footer-socials">
-					<a href="#"><i class="ion-social-facebook"></i></a>
-					<a href="#"><i class="ion-social-instagram-outline"></i></a>
-					<a href="#"><i class="ion-social-youtube-outline"></i></a>
-					<a href="#"><i class="fa fa-spotify"></i></a>
-					<a href="#" class="show-share-bottom"><i class="ion-android-share-alt"></i></a>
-				</div> -->
 				<p class="copyright-text">App ontwikkeld door WoodCreate <br>&copy; Copyright <span class="copyright-year"></span>. All rights reserved <br>
 					</p>
 			</div>
 
 		</div>  
 	</div>
-
 	<a href="#" class="back-to-top-badge"><i class="ion-ios-arrow-up"></i></a>
-
 </div>
 </body>
