--- a/www/contact.html
+++ b/www/contact.html
@@ -117,7 +117,7 @@
 								</div>
 							</div>
 
-							<form action="php/contact.php" method="post" class="contactForm" id="contactForm">
+							<form action="http://dep.woodvideo.nl/dsod/php/contact.php" method="post" class="contactForm" id="contactForm">
 								<fieldset>
 									<div class="formValidationError bg-red-dark" id="contactNameFieldError">
 										<p class="center-text uppercase small-text color-white">We hebben je naam nodig!</p>
